# GSEngine

./: -.json  .clang-tidy  .clangd  .gitignore  .gitmodules  Build.bat  CMakeLists.txt  CMakePresets.json  Folder.DotSettings  README.md  Rebuild.bat  bootstrap.py  interview_prep_lucky_robots.md  main.cpp  report.md  setup.py  vcpkg.json
Editor/: CMakeLists.txt
Editor/Editor/Include/: Editor.h  ResourcePaths.h.in
Editor/Editor/Source/: Editor.cpp  main.cpp
Editor/Include/: Editor.h
Editor/Resources/: imgui_state.ini  imgui_state.json
Editor/Source/: Editor.cpp  main.cpp
Engine/: CMakeLists.txt
Engine/Engine/: Engine.h
Engine/Engine/Import/: Assert.cpp  Assert.cppm  Assets.cppm  Concurrency.cppm  Config.cppm.in  Containers.cppm  Core.cppm  Diag.cppm  Ecs.cppm  Engine.cppm  Examples.cppm  Fs.cppm  Gpu.cppm  GpuContext.cppm  GpuDevice.cppm  GpuResources.cppm  GpuShader.cppm  GpuVulkan.cppm  Graphics.cppm  Hooks.cppm  Log.cpp  Log.cppm  Math.cppm  Meta.cppm  Network.cpp  Network.cppm  Os.cppm  Physics.cppm  Platform.cppm  Runtime.cppm  Save.cppm  Scene.cppm  ShaderCompiler.cppm  Time.cppm  Toml.cppm  Utility.cppm  Vulkan.cppm
Engine/Engine/Include/: Engine.cppm  Engine.h  Engine.ixx
Engine/Engine/Include/Audio/: Audio.ixx
Engine/Engine/Include/Core/: Clock.h  Clock.ixx  Core.ixx  Engine.h  Engine.ixx  EngineComponent.h  EngineComponent.ixx  EngineCore.h  EngineCore.ixx  ID.h  ID.ixx  JsonParse.ixx  JsonParser.h  JsonParser.ixx  MainClock.ixx  Map.ixx  ObjectRegistry.h  ObjectRegistry.ixx  ResourcePaths.h.in  Scene.h  Scene.ixx  SceneHandler.h  SceneLoader.h  SceneLoader.ixx  SystemBackend.ixx  TimedLock.ixx  Timer.ixx
Engine/Engine/Include/Examples/: Examples.ixx  ProceduralModels.cppm  ProceduralModels.ixx
Engine/Engine/Include/Graphics/: BBRenderComponent.h  BaseRenderer.ixx  BoundingBox.h  BoundingBoxMesh.h  Camera.h  CubeMap.h  Debug.h  Debug.ixx  Graphics.ixx  Material.h  Mesh.h  MeshComponent.h  RenderComponent.h  RenderComponent.ixx  RenderQueueEntry.h  Renderer.h  Renderer.ixx  RenderingContext.ixx  ResourceLoader.ixx  Shader.h  Shader.ixx  ShaderLoader.ixx
Engine/Engine/Include/Input/: Input.h
Engine/Engine/Include/Network/: Client.cppm  Message.cppm  Network.cppm  Network.h  Network.ixx  PacketHeader.cppm  Socket.ixx  TransferTemplates.ixx
Engine/Engine/Include/Physics/: MotionComponent.h  MotionComponent.ixx  Octree.ixx  Physics.cppm  Physics.ixx  PhysicsSystem.ixx  Surfaces.h  Surfaces.ixx  System.h  System.ixx  Update.ixx
Engine/Engine/Include/Platform/: Assert.cppm  Assert.ixx  CallBacks.h  PermaAssert.h  PermaAssert.ixx  Platform.h  Platform.ixx
Engine/Engine/Source/Assets/: AssetCompiler.cppm  AssetPipeline.cppm  AssetRegistry.cppm  ResourceHandle.cppm  ResourceLoader.cppm
Engine/Engine/Source/Audio/: Audio.cpp  Audio.cppm
Engine/Engine/Source/Concurrency/: AsyncTask.cpp  AsyncTask.cppm  ChannelBase.cppm  ChannelPromise.cppm  FrameArena.cppm  FrameScheduler.cppm  MpscRingBuffer.cppm  PerFrameResource.cppm  RwMutex.cppm  SpscRingBuffer.cppm  Task.cppm  TaskGraph.cppm
Engine/Engine/Source/Containers/: Archive.cppm  FlatMap.cppm  LinearVector.cppm  NBuffer.cppm  SlotMap.cppm  StaticVector.cppm
Engine/Engine/Source/Core/: Clock.cpp  Config.ixx.in  EngineComponent.cpp  EngineCore.cpp  Flags.cppm  ID.cpp  ID.cppm  JsonLoader.cpp  JsonParser.cpp  Misc.cppm  MoveOnlyFunction.cppm  NonCopyable.cppm  ObjectRegistry.cpp  Percentage.cppm  Scene.cpp  SceneHandler.cpp  SceneLoader.cpp  ScopeExit.cppm
Engine/Engine/Source/Diag/: ProfileAggregator.cppm  Trace.cpp  Trace.cppm
Engine/Engine/Source/Ecs/: AccessToken.cppm  Component.cppm  FrameContext.cppm  PhaseContext.cppm  Registries.cppm  Registry.cppm  Scheduler.cpp  Scheduler.cppm  SystemDispatch.cppm  SystemNode.cppm  TaskContext.cppm  Traits.cppm  UpdateContext.cppm
Engine/Engine/Source/Examples/: AnimationExamples.cppm  ProceduralModels.cppm
Engine/Engine/Source/Fs/: FileWatcher.cppm
Engine/Engine/Source/Gpu/: AccelerationStructure.cpp  AccelerationStructure.cppm  Aliases.cppm  Bindless.cppm  Buffer.cpp  Buffer.cppm  Compute.cppm  Context.cppm  Descriptors.cppm  GpuBuffer.cppm  GpuCompute.cppm  GpuContext.cppm  GpuImage.cppm  GpuPipeline.cppm  GpuPushConstants.cppm  GpuSync.cppm  GpuTypes.cppm  Handles.cppm  Image.cpp  Image.cppm  Pipeline.cppm  VideoEncoder.cppm
Engine/Engine/Source/Graphics/: AssetCompiler.cppm  AssetPipeline.cppm  BBRenderComponent.cpp  BaseRenderer.cppm  BoundingBox.cpp  (+15 more)
Engine/Modules/: MathShims.cpp  Tomlplusplus.cppm
Engine/Resources/: imgui_state.json
Engine/Resources/Clips/: mixamo.com.gclip
Engine/Resources/Misc/: asan_suppressions.txt  gui_layout.ggui  msvc_build_stl_modules_workaround.props  settings.cfg
Engine/Resources/Shaders/: LightShaders.json  Shaders.json  common.slang  emissive.frag  forward_rendering.frag  geometry_shaders.json  lighting.frag  lighting.vert  lighting_pass.frag  lighting_pass.vert  shadow.frag  shadow.vert
Engine/Resources/Skeletons/: character.gskel
Engine/Resources/SkinnedModels/: character.gsmdl  character.mtl
Game/: CMakeLists.txt
Game/Game/Import/: Game.cppm
Game/Game/Include/: Arena.h  Arena.ixx  Backpack.ixx  BlackKnight.cppm  BlackKnight.ixx  Box.h  Client.cppm  Config.ixx.in  Game.cppm  Game.h  Game.ixx  GameUI.cppm  IronMan.ixx  MainTestScene.ixx  Oregon.ixx  Player.h  Player.ixx  ResourcePaths.h.in  SceneLoader.cppm  SecondTestScene.ixx  Skybox.h  Skybox.ixx  SkyboxScene.ixx  SphereLight.h  SphereLight.ixx
Game/Game/Source/: Arena.cpp  Box.cpp  Client.cppm  Game.cpp  GameUI.cppm  Main.cpp  Player.cpp  SceneLoader.cppm  Skybox.cpp  SphereLight.cpp  WorldLoader.cppm  main.cpp  main.cppm
Game/Include/: Arena.h  Box.h  Game.h  Player.h
Game/Lib/: CMakeLists.txt
Game/Resources/: imgui_state.ini  imgui_state.json
Game/Resources/Code Snippets/: GameObjectTemplate.snippet
Game/Source/: Arena.cpp  Box.cpp  Game.cpp  Player.cpp  main.cpp
Server/: CMakeLists.txt
Server/Server/Include/: Application.cppm  Server.cppm  Server.ixx
Server/Server/Source/: InputSource.cppm  Main.cppm  main.cpp
(+978 files in other folders)
